Add/merge utilities from java-utilities